--- a/andriodApp/app/src/main/res/layout/activity_main.xml
+++ b/andriodApp/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:fitsSystemWindows="true"
-        app:layout_constraintBottom_toTopOf="@id/layout_content_main"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    TODO: The commented segment to be deleted and activity main to be updated once figma uis are imported-->
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/appBarLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/layout_content_main"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-    </com.google.android.material.appbar.AppBarLayout>
+<!--        <com.google.android.material.appbar.MaterialToolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?attr/actionBarSize"/>-->
 
-    <include
-        android:id="@+id/layout_content_main"
-        layout="@layout/content_main"
-        android:layout_width="match_parent"
-        android:layout_height="675dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        tools:layout_editor_absoluteX="3dp" />
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
+<!--    <include-->
+<!--        android:id="@+id/layout_content_main"-->
+<!--        layout="@layout/content_main"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="675dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/appBarLayout"-->
+<!--        tools:layout_editor_absoluteX="3dp" />-->
+
+    <Button
+        android:id="@+id/button_create_new_event"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/demo_button_create_new_event"
+        tools:ignore="MissingConstraints"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
