--- a/andriodApp/app/src/main/res/layout/event_creation.xml
+++ b/andriodApp/app/src/main/res/layout/event_creation.xml
@@ -3,12 +3,51 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="675dp">
+    android:layout_height="match_parent">
+
+<!--    TODO: This XML to be updated with the CreateEvent UI of Figma -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintBottom_toTopOf="@id/scrollable_create_event"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|start"
+                android:layout_marginBottom="16dp"
+                android:contextClickable="true" />
+
+            <TextView
+                android:id="@+id/CreateEvent_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Create New Event"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
         android:id="@+id/scrollable_create_event"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +72,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/hint_event_organizer"
-                android:inputType="text"
-                android:importantForAutofill="no" />
+                android:importantForAutofill="no"
+                android:inputType="text" />
 
             <TextView
                 android:id="@+id/textView_create_event_event_name"
@@ -49,8 +88,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/hint_event_name"
-                android:inputType="text"
-                android:importantForAutofill="no" />
+                android:importantForAutofill="no"
+                android:inputType="text" />
 
             <TextView
                 android:id="@+id/textView_create_event_event_date"
@@ -65,8 +104,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="@string/hint_event_date"
-                android:inputType="date"
-                android:importantForAutofill="no" />
+                android:importantForAutofill="no"
+                android:inputType="date" />
 
             <TextView
                 android:id="@+id/textView_create_event_event_info"
@@ -81,8 +120,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="239dp"
                 android:hint="@string/hint_event_info"
-                android:inputType="text"
-                android:importantForAutofill="no" />
+                android:importantForAutofill="no"
+                android:inputType="text" />
 
             <Button
                 android:id="@+id/buttonUploadPoster"
