--- a/andriodApp/app/src/main/res/layout/create_event.xml
+++ b/andriodApp/app/src/main/res/layout/create_event.xml
@@ -1,19 +1,19 @@
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent" android:layout_height="match_parent" >
-
-	<ScrollView android:id="@+id/create_event" 
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent" >
-
-		<RelativeLayout android:id="@+id/content_container" 
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:background="@color/white">
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="393dp"
+	android:layout_height="807dp">
+		<ScrollView android:id="@+id/create_event"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			tools:ignore="MissingConstraints">
 			<RelativeLayout
 				android:id="@+id/page_create_event_ek1"
-				android:layout_width="411dp"
-				android:layout_height="731dp"
+				android:layout_width="393dp"
+				android:layout_height="807dp"
 				android:background="@color/white">
+
 				<RelativeLayout
 					android:id="@+id/profile"
 					android:layout_width="match_parent"
@@ -22,26 +22,27 @@
 					tools:ignore="RtlHardcoded">
 
 					<ImageView
-						android:id="@+id/vector"
+						android:id="@+id/back_less"
 						android:layout_width="39dp"
 						android:layout_height="wrap_content"
 						android:layout_marginStart="22dp"
 						android:layout_marginTop="24dp"
-						android:contentDescription="vector"
+						android:contentDescription="@string/back_button_implemented_with_less_then"
 						android:foregroundGravity="left|bottom"
-						android:src="@drawable/vector" />
+						android:src="@drawable/back_less" />
+
 					<TextView
 						android:id="@+id/create_new_event"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginTop="16dp"
+						android:layout_marginLeft="35dp"
+						android:layout_toEndOf="@+id/back_less"
 						android:text="@string/create_new_event_string"
-						android:textColor="@color/_bg__profile_ek1_color"
+						android:textColor="@color/black"
 						android:textSize="24sp"
-						android:textStyle="bold"
-						android:layout_toEndOf="@+id/vector"/>
+						android:textStyle="bold" />
 				</RelativeLayout>
-
 
 				<RelativeLayout
 					android:id="@+id/place_holders"
@@ -49,10 +50,12 @@
 					android:layout_height="wrap_content"
 					android:layout_marginStart="28dp"
 					android:layout_marginTop="254dp">
+
 					<LinearLayout
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:orientation="vertical">
+
 						<TextView
 							android:id="@+id/date"
 							android:layout_width="wrap_content"
@@ -60,20 +63,20 @@
 							android:layout_marginStart="0dp"
 							android:layout_marginTop="0dp"
 							android:text="@string/date_string"
-							android:textColor="@color/_bg__profile_ek1_color"
+							android:textColor="@color/black"
 							android:textSize="16.02sp"
 							android:textStyle="bold" />
+
 						<EditText
 							android:id="@+id/editDate"
 							android:layout_width="335dp"
 							android:layout_height="50dp"
+							android:background="@drawable/boundary_style"
 							android:hint="@string/dd_mm_yy_string"
 							android:importantForAutofill="no"
-							android:inputType="date"
-							android:background="@drawable/boundary_style"/>
+							android:inputType="date" />
 					</LinearLayout>
 				</RelativeLayout>
-
 
 				<RelativeLayout
 					android:id="@+id/place_holders_ek2"
@@ -81,10 +84,12 @@
 					android:layout_height="wrap_content"
 					android:layout_marginStart="28dp"
 					android:layout_marginTop="346dp">
+
 					<LinearLayout
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:orientation="vertical">
+
 						<TextView
 							android:id="@+id/attendee_limit"
 							android:layout_width="135.60175189972dp"
@@ -98,13 +103,12 @@
 							android:id="@+id/no_limit"
 							android:layout_width="335dp"
 							android:layout_height="50dp"
+							android:background="@drawable/boundary_style"
 							android:hint="@string/no_limit_string"
 							android:importantForAutofill="no"
-							android:inputType="date"
-							android:background="@drawable/boundary_style"/>
+							android:inputType="date" />
 					</LinearLayout>
 				</RelativeLayout>
-
 
 				<RelativeLayout
 					android:id="@+id/place_holders_ek4"
@@ -112,6 +116,7 @@
 					android:layout_height="wrap_content"
 					android:layout_marginStart="30dp"
 					android:layout_marginTop="438dp">
+
 					<LinearLayout
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
@@ -123,17 +128,17 @@
 							android:layout_marginStart="0dp"
 							android:layout_marginTop="0dp"
 							android:text="@string/event_info_string"
-							android:textColor="@color/_bg__profile_ek1_color"
+							android:textColor="@color/black"
 							android:textSize="16.02sp"
 							android:textStyle="bold" />
 						<EditText
 							android:id="@+id/editTextEventInfo"
 							android:layout_width="335dp"
 							android:layout_height="100dp"
+							android:background="@drawable/boundary_style"
 							android:hint="@string/aliwo1123_gmail_com_string"
 							android:importantForAutofill="no"
-							android:inputType="text"
-							android:background="@drawable/boundary_style"/>
+							android:inputType="text" />
 					</LinearLayout>
 				</RelativeLayout>
 
@@ -155,18 +160,17 @@
 							android:layout_marginStart="2dp"
 							android:layout_marginTop="0dp"
 							android:text="@string/event_name_string"
-							android:textColor="@color/_bg__profile_ek1_color"
+							android:textColor="@color/black"
 							android:textSize="16.02sp"
 							android:textStyle="bold" />
-
 						<EditText
 							android:id="@+id/editTextEventName"
 							android:layout_width="335dp"
 							android:layout_height="50dp"
+							android:background="@drawable/boundary_style"
 							android:hint="@string/career_fair_2023_string"
 							android:importantForAutofill="no"
-							android:inputType="text"
-							android:background="@drawable/boundary_style"/>
+							android:inputType="text" />
 					</LinearLayout>
 				</RelativeLayout>
 
@@ -188,38 +192,34 @@
 							android:layout_marginStart="9dp"
 							android:layout_marginTop="0dp"
 							android:text="@string/name_of_organizer_string"
-							android:textColor="@color/_bg__profile_ek1_color"
+							android:textColor="@color/black"
 							android:textSize="16.02sp"
 							android:textStyle="bold" />
-
 						<EditText
 							android:id="@+id/editTextOrganizerName"
 							android:layout_width="335dp"
 							android:layout_height="50dp"
+							android:background="@drawable/boundary_style"
 							android:hint="@string/hint_event_organizer"
 							android:importantForAutofill="no"
-							android:inputType="text"
-							android:background="@drawable/boundary_style"/>
+							android:inputType="text" />
 					</LinearLayout>
 				</RelativeLayout>
 
-
 				<RelativeLayout
-					android:id="@+id/button"
+					android:id="@+id/light_green_generate_qr_button"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_marginStart="106dp"
-					android:layout_marginTop="671dp"
+					android:layout_marginTop="710dp"
 					android:gravity="center">
-
 					<View
-						android:id="@+id/rectangle_25"
+						android:id="@+id/light_green_button_rect"
 						android:layout_width="205dp"
 						android:layout_height="27dp"
 						android:layout_marginStart="-1dp"
 						android:layout_marginTop="-1dp"
-						android:background="@drawable/rectangle_25_shape" />
-
+						android:background="@drawable/light_green_button_setup" />
 					<TextView
 						android:id="@+id/generate_qr_code"
 						android:layout_width="205dp"
@@ -233,20 +233,7 @@
 						android:textColor="@color/generate_qr_code_color"
 						android:textSize="16.02sp"
 						android:textStyle="bold" />
-
 				</RelativeLayout>
-
-
-				<RelativeLayout
-					android:id="@+id/user_alt"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginStart="197dp"
-					android:layout_marginTop="143dp">
-
-
-				</RelativeLayout>
-
 
 				<RelativeLayout
 					android:id="@+id/list_item"
@@ -254,42 +241,15 @@
 					android:layout_height="wrap_content"
 					android:layout_marginStart="271dp"
 					android:layout_marginTop="588dp">
-
-					<View
-						android:id="@+id/_bg__list_item_ek1"
-						android:layout_width="41dp"
-						android:layout_height="41dp"
-						android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp"
-						android:background="@drawable/_bg__list_item_ek1_shape" />
-
-
-					<RelativeLayout
-						android:id="@+id/icon_folderplus"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp">
-
-						<View
-							android:id="@+id/_bg__icon_folderplus_ek1"
-							android:layout_width="41dp"
-							android:layout_height="41dp"
-							android:background="@color/white" />
-
-						<ImageView
-							android:id="@+id/vector_ek1"
-							android:layout_width="33.31dp"
-							android:layout_height="28.19dp"
-							android:layout_marginStart="3.84dp"
-							android:layout_marginTop="6.41dp"
-							android:contentDescription="vector_ek1"
-							android:src="@drawable/vector_ek1" />
-
-					</RelativeLayout>
-
+					<ImageView
+						android:id="@+id/upload_qr"
+						android:layout_width="33.31dp"
+						android:layout_height="28.19dp"
+						android:layout_marginStart="3.84dp"
+						android:layout_marginTop="6.41dp"
+						android:contentDescription="@string/upload_event_qr_code"
+						android:src="@drawable/folder_plus_upload" />
 				</RelativeLayout>
-
 				<TextView
 					android:id="@+id/upload_your_qr_code"
 					android:layout_width="108dp"
@@ -299,7 +259,7 @@
 					android:layout_marginTop="629dp"
 					android:gravity="center"
 					android:text="@string/upload_your_qr_code_string"
-					android:textColor="@color/_bg__profile_ek1_color"
+					android:textColor="@color/black"
 					android:textSize="15sp"
 					android:textStyle="bold" />
 
@@ -310,44 +270,15 @@
 					android:layout_height="wrap_content"
 					android:layout_marginStart="79dp"
 					android:layout_marginTop="588dp">
-
-					<View
-						android:id="@+id/_bg__list_item_ek3"
-						android:layout_width="41dp"
-						android:layout_height="41dp"
-						android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp"
-						android:background="@drawable/_bg__list_item_ek3_shape" />
-
-
-					<RelativeLayout
-						android:id="@+id/icon_folderplus_ek2"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp">
-
-						<View
-							android:id="@+id/_bg__icon_folderplus_ek3"
-							android:layout_width="41dp"
-							android:layout_height="41dp"
-							android:layout_marginStart="0dp"
-							android:layout_marginTop="0dp"
-							android:background="@color/white" />
-
-						<ImageView
-							android:id="@+id/vector_ek2"
-							android:layout_width="33.31dp"
-							android:layout_height="28.19dp"
-							android:layout_marginStart="3.84dp"
-							android:layout_marginTop="6.41dp"
-							android:contentDescription="vector_ek2"
-							android:src="@drawable/vector_ek2" />
-
-					</RelativeLayout>
-
+					<ImageView
+						android:id="@+id/vector_ek2"
+						android:layout_width="33.31dp"
+						android:layout_height="28.19dp"
+						android:layout_marginStart="3.84dp"
+						android:layout_marginTop="6.41dp"
+						android:contentDescription="vector_ek2"
+						android:src="@drawable/folder_plus_upload" />
 				</RelativeLayout>
-
 				<TextView
 					android:id="@+id/upload_event_poster"
 					android:layout_width="115dp"
@@ -357,12 +288,9 @@
 					android:layout_marginTop="629dp"
 					android:gravity="center"
 					android:text="@string/upload_event_poster_string"
-					android:textColor="@color/_bg__profile_ek1_color"
+					android:textColor="@color/black"
 					android:textSize="15sp"
 					android:textStyle="bold" />
-
 			</RelativeLayout>
-		</RelativeLayout>
-
-	</ScrollView>
-</HorizontalScrollView>
+		</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
