--- a/andriodApp/app/src/main/res/layout/activity_main.xml
+++ b/andriodApp/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,14 @@
             android:gravity="center"
             android:text="Attendee Event Info Sign Up"
             tools:ignore="MissingConstraints"/>
+
+        <Button
+            android:id="@+id/button_attendee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Attendees"
+            tools:ignore="MissingConstraints"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
