--- a/andriodApp/app/src/main/res/values/colors.xml
+++ b/andriodApp/app/src/main/res/values/colors.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+	<!-- edit_profile colors -->
+
+	<color name="colorPrimary">#008577</color>
+	<color name="colorPrimaryDark">#00574B</color>
+	<color name="colorAccent">#D81B60</color>
+	<color name="purple_200">#FFBB86FC</color>
+	<color name="purple_500">#FF6200EE</color>
+	<color name="purple_700">#FF3700B3</color>
+	<color name="teal_200">#FF03DAC5</color>
+	<color name="teal_700">#FF018786</color>
+	<color name="black">#FF000000</color>
+	<color name="white">#FFFFFFFF</color>
+
+	<color name="_bg__edit_profile_ek2_color">#FFFFFF</color>
+	<color name="_bg__profile_ek1_color">#000000</color>
+	<color name="name_rectangle_color">#D9D9D9</color>
+	<color name="save_color">#A8E0A2</color>
+	<color name="save_changes_ek2_color">#FFFCFC</color>
+	<color name="rectangle_color">#ffffff</color>
 </resources>
