--- a/andriodApp/app/src/main/res/drawable-nodpi/save_shape.xml
+++ b/andriodApp/app/src/main/res/drawable-nodpi/save_shape.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" >
 	<corners android:radius="5.01dp" />
-	<stroke android:color="#a92ca9" android:width="1dp" />
-	<solid android:color="@color/save_color" />
+	<stroke android:color="#A8E0A2" android:width="1dp" />
+	<solid android:color="#A8E0A2" />
 </shape>
 
