--- a/andriodApp/app/src/main/res/layout/admin_browse_profiles.xml
+++ b/andriodApp/app/src/main/res/layout/admin_browse_profiles.xml
@@ -7,14 +7,14 @@
 
     <!-- Attendees Count Text -->
 
-    <ImageView
-        android:id="@+id/header_icon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+    <ImageButton
+        android:id="@+id/back_admin_browse_profiles"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginBottom="691dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:contentDescription="BackButton"
         android:scaleType="centerInside"
         android:src="@drawable/header_icon" />
