--- a/andriodApp/app/src/main/res/layout/user_edit_profile.xml
+++ b/andriodApp/app/src/main/res/layout/user_edit_profile.xml
@@ -58,7 +58,7 @@
                         android:layout_height="48dp"
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
-                        android:contentDescription="@string/back_button"
+                        android:contentDescription="back_button"
                         android:src="@drawable/vector" />
 
                     <TextView
@@ -67,7 +67,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="123dp"
                         android:layout_marginTop="2dp"
-                        android:text="@string/edit_profile_ek3_string"
+                        android:text="Edit Profile"
                         android:textColor="@color/_bg__profile_ek1_color"
                         android:textSize="20.02sp"
                         android:textStyle="bold" />
@@ -79,7 +79,7 @@
                         android:layout_marginStart="106dp"
                         android:layout_marginTop="46dp"
                         android:src="@drawable/ellipse_1"
-                        android:contentDescription="@string/pfp_placeholder" />
+                        android:contentDescription="pfp_outer_circle" />
 
                     <ImageButton
                         android:id="@+id/pfp_upload_button"
@@ -87,7 +87,7 @@
                         android:layout_height="16.1dp"
                         android:layout_marginStart="214dp"
                         android:layout_marginTop="154dp"
-                        android:contentDescription="@string/camera_button"
+                        android:contentDescription="camera_button"
                         android:src="@drawable/vector_ek1" />
 
                     <ImageView
@@ -97,7 +97,7 @@
                         android:layout_marginStart="152dp"
                         android:layout_marginTop="93dp"
                         android:src="@drawable/vector_ek2"
-                        android:contentDescription="@string/pfp_default" />
+                        android:contentDescription="pfp_default" />
 
                 </RelativeLayout>
 
@@ -122,7 +122,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="0dp"
                             android:layout_marginTop="0dp"
-                            android:text="@string/name_string"
+                            android:text="Name"
                             android:textColor="@color/_bg__profile_ek1_color"
                             android:textSize="16.02sp"
                             android:textStyle="bold" />
@@ -135,7 +135,7 @@
                             android:layout_marginTop="29dp"
                             android:alpha="1000"
                             android:background="@drawable/name_rectangle_shape"
-                            android:hint="@string/name"
+                            android:hint="John Smith"
                             android:inputType="text"
                             android:visibility="visible"
                             android:importantForAutofill="no" />
@@ -156,7 +156,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="0dp"
                             android:layout_marginTop="0dp"
-                            android:text="@string/phone_string"
+                            android:text="Phone Number"
                             android:textColor="@color/_bg__profile_ek1_color"
                             android:textSize="16.02sp"
                             android:textStyle="bold" />
@@ -169,7 +169,7 @@
                             android:layout_marginTop="29dp"
                             android:alpha="100"
                             android:background="@drawable/phone_rectangle_shape"
-                            android:hint="@string/phone_number_input"
+                            android:hint="#777-777-7777"
                             android:inputType="phone"
                             android:importantForAutofill="no" />
 
@@ -190,7 +190,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="0dp"
                             android:layout_marginTop="0dp"
-                            android:text="@string/email__optional__string"
+                            android:text="Email (optional)"
                             android:textColor="@color/_bg__profile_ek1_color"
                             android:textSize="16.02sp"
                             android:textStyle="bold" />
@@ -203,7 +203,7 @@
                             android:layout_marginTop="29dp"
                             android:alpha="100"
                             android:background="@drawable/email_rectangle_shape"
-                            android:hint="@string/name_email_com"
+                            android:hint="name@email.com"
                             android:inputType="text|textEmailAddress"
                             android:importantForAutofill="no" />
 
@@ -227,7 +227,7 @@
                         android:layout_marginStart="0dp"
                         android:layout_marginTop="0dp"
                         android:textStyle="bold"
-                        android:text="@string/save_changes_button" />
+                        android:text="Save Changes" />
 
                 </RelativeLayout>
 
@@ -240,7 +240,7 @@
                     android:layout_marginTop="500dp"
                     android:layout_marginEnd="13dp"
                     android:layout_marginBottom="13dp"
-                    android:text="@string/enable_notifications"
+                    android:text="Enable Notifications"
                     android:textColor="@color/_bg__profile_ek1_color"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -256,7 +256,7 @@
                 android:layout_marginTop="550dp"
                 android:layout_marginEnd="13dp"
                 android:layout_marginBottom="13dp"
-                android:text="@string/enable_Location"
+                android:text="Enable Location"
                 android:textColor="@color/_bg__profile_ek1_color"
                 android:textSize="20sp"
                 android:textStyle="bold" />
