added all of req Ben's code for QR

--- a/andriodApp/app/src/main/res/layout/activity_main.xml
+++ b/andriodApp/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,15 @@
             android:text="Attendee Home"
             tools:ignore="MissingConstraints"
             />
+
+        <Button
+            android:id="@+id/QR_Screen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="QR Screen"
+            tools:ignore="MissingConstraints"
+            />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
